# wen-migration

./: .gitignore  Anchor.toml  Cargo.toml
client/: package.json  tsconfig.json
client/src/instructions/: group.ts  nft.ts
client/src/program/: index.ts  wen_migration.json  wen_migration.ts
client/src/utils/: constants.ts  core.ts  data.ts  index.ts  instructions.ts
wen_migration/: Cargo.toml
wen_migration/src/: errors.rs  lib.rs  state.rs
wen_migration/src/instructions/: collection.rs  mod.rs  update_collection.rs
wen_migration/src/instructions/mint/: burn.rs  migrate.rs  mod.rs  whitelist.rs
