[package]
name = "wen-migration"
version = "0.0.2-alpha"
description = "Program for migrating from metaplex to WNS"
edition = "2018"

[package.metadata.docs.rs]
tags = ["wns", "alpha", "solana", "token_extensions"]

[lib]
crate-type = ["cdylib", "lib"]
name = "wen_migration"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["interface-instructions", "init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022_extensions", "token_2022"] }
spl-transfer-hook-interface = "0.5.1"
spl-tlv-account-resolution = "0.4.0"
spl-pod = "0.2.2"
mpl-token-metadata = "4.1.2"
wen_new_standard = { git = "https://github.com/wen-community/wen-program-library", branch = "no_kinobi", features = ["cpi"] }
